--- a/src/amplify (1).yml
+++ b/src/amplify (1).yml
@@ -5,7 +5,7 @@ applications:
         build:
           commands: []
       artifacts:
-        baseDirectory: /
+        baseDirectory: /src
         files:
           - '**/*'
       cache:
