--- a/src/amplify (1).yml
+++ b/src/amplify (1).yml
@@ -3,9 +3,10 @@ applications:
   - frontend:
       phases:
         build:
-          commands: []
+      commands:
+        - npm run build
       artifacts:
-        baseDirectory: /src
+        baseDirectory: src
         files:
           - '**/*'
       cache:
