--- a/src/amplify (1).yml
+++ b/src/amplify (1).yml
@@ -6,7 +6,7 @@ applications:
       commands:
         - npm run build
       artifacts:
-        baseDirectory: src
+        baseDirectory: Build
         files:
           - '**/*'
       cache:
